@startuml

title __VIEW CONTROLLERS's Class Diagram__\n

  namespace com.soundlab.dockerizedjavaapi {
    namespace controllers.view {
      class com.soundlab.dockerizedjavaapi.controllers.view.HomeViewController {
          + HomeViewController()
          + getCandidatoContent()
          + getCandidatoContent()
          + getEmpresaContent()
          + getEmpresaContent()
      }
    }
  }
  

  namespace com.soundlab.dockerizedjavaapi {
    namespace controllers.view {
      class com.soundlab.dockerizedjavaapi.controllers.view.PublishVagaViewContoller {
          + PublishVagaViewContoller()
          + requestSignUp()
      }
    }
  }
  

  namespace com.soundlab.dockerizedjavaapi {
    namespace controllers.view {
      class com.soundlab.dockerizedjavaapi.controllers.view.RankingViewController {
          + RankingViewController()
          + getContent()
          + getResposta()
      }
    }
  }
  

  namespace com.soundlab.dockerizedjavaapi {
    namespace controllers.view {
      class com.soundlab.dockerizedjavaapi.controllers.view.ResponderVagaViewController {
          + ResponderVagaViewController()
          + getContent()
          + requestAnswer()
      }
    }
  }
  

  namespace com.soundlab.dockerizedjavaapi {
    namespace controllers.view {
      class com.soundlab.dockerizedjavaapi.controllers.view.SignInViewController {
          + SignInViewController()
          + getContent()
          + requestSignIn()
      }
    }
  }
  

  namespace com.soundlab.dockerizedjavaapi {
    namespace controllers.view {
      class com.soundlab.dockerizedjavaapi.controllers.view.SignUpViewController {
          + SignUpViewController()
          + requestSignUp()
      }
    }
  }
  

  com.soundlab.dockerizedjavaapi.controllers.view.HomeViewController o-- com.soundlab.dockerizedjavaapi.services.view.HomeCandidatoViewService : homeCandidatoViewService
  com.soundlab.dockerizedjavaapi.controllers.view.HomeViewController o-- com.soundlab.dockerizedjavaapi.services.view.HomeEmpresaViewService : homeEmpresaViewService
  com.soundlab.dockerizedjavaapi.controllers.view.PublishVagaViewContoller o-- com.soundlab.dockerizedjavaapi.services.view.PublishVagaViewService : publishVagaViewService
  com.soundlab.dockerizedjavaapi.controllers.view.RankingViewController o-- com.soundlab.dockerizedjavaapi.services.view.RankingViewService : rankingViewService
  com.soundlab.dockerizedjavaapi.controllers.view.ResponderVagaViewController o-- com.soundlab.dockerizedjavaapi.services.view.ResponderVagaViewService : responderVagaViewService
  com.soundlab.dockerizedjavaapi.controllers.view.SignInViewController o-- com.soundlab.dockerizedjavaapi.services.view.SignInViewService : signInViewService
  com.soundlab.dockerizedjavaapi.controllers.view.SignUpViewController o-- com.soundlab.dockerizedjavaapi.services.view.SignUpViewService : signUpViewService


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
